--- a/src/main/resources/templates/thu.html
+++ b/src/main/resources/templates/thu.html
@@ -44,6 +44,8 @@
             <th scope="col">№</th>
             <th scope="col">Subject</th>
             <th scope="col">Time</th>
+            <th scope="col">Links</th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
@@ -51,6 +53,16 @@
             <td th:text="${t.id}"></td>
             <td th:text="${t.title}"></td>
             <td th:text="${t.content}"></td>
+            <td>
+                <a th:href="${t.link}" class="btn btn-outline-primary">
+                    Zoom
+                </a>
+            </td>
+            <td>
+                <a th:href="${t.link}" class="btn btn-outline-success">
+                    Classroom
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
