--- a/src/main/resources/templates/thu.html
+++ b/src/main/resources/templates/thu.html
@@ -66,6 +66,14 @@
         </tr>
         </tbody>
     </table>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Playlist for today</h1>
+            <p class="lead">This is a playlist for Thursday.</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2AxwYfiTSU9xox6HluBbR8?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+        </div>
+    </div>
 </div>
 
 </body>
