--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -57,7 +57,7 @@
                 </a>
             </td>
             <td>
-                <a th:href="${s.link}" class="btn btn-outline-success">
+                <a th:href="${s.clink}" class="btn btn-outline-success">
                     Classroom
                 </a>
             </td>
@@ -72,8 +72,6 @@
 
         </div>
     </div>
-<!--    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5VMfT4Oygas0ZsfMpEupsB?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>-->
 </div>
-
 </body>
 </html>
