--- a/src/main/resources/templates/thu.html
+++ b/src/main/resources/templates/thu.html
@@ -59,7 +59,7 @@
                 </a>
             </td>
             <td>
-                <a th:href="${t.link}" class="btn btn-outline-success">
+                <a th:href="${t.clink}" class="btn btn-outline-success">
                     Classroom
                 </a>
             </td>
