--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -68,8 +68,13 @@
         <div class="container">
             <h1 class="display-4">Playlist for today</h1>
             <p class="lead">This is a playlist for Monday.</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5VMfT4Oygas0ZsfMpEupsB?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
+            <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/5VMfT4Oygas0ZsfMpEupsB?utm_source=generator"
+                    width="100%" height="80"
+                    frameBorder="0"
+                    allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
         </div>
     </div>
 </div>
