--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -2,8 +2,10 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>404 Error</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300'><link rel="stylesheet" href="css/style.css">
+    <title>404 Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300'>
+    <link rel="stylesheet" href="/static/style.css">
 
 </head>
 <body>
@@ -14,7 +16,7 @@
     </div>
 </div>
 <!-- partial -->
-<script  src="js/script.js"></script>
+<script  src="./script.js"></script>
 
 </body>
 </html>
