--- a/src/main/resources/templates/error/505.html
+++ b/src/main/resources/templates/error/505.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>505 Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300'>
+    <link rel="stylesheet" href="/static/style.css">
+
 </head>
 <body>
+<!-- partial:index.partial.html -->
+<div id="main">
+    <div class="fof">
+        <h1>Error 505</h1>
+    </div>
+</div>
+<!-- partial -->
+<script  src="/static/script.js"></script>
 
 </body>
 </html>
