--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item disabled">
-                    <a class="nav-link" >Monday<span class="sr-only">(current)</span></a>
+                    <a class="nav-link">Monday<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/tue}">Tuesday<span class="sr-only">(current)</span></a>
@@ -44,6 +44,7 @@
             <th scope="col">Time</th>
             <th scope="col">Links</th>
             <th scope="col"></th>
+            <th scope="col">Lesson:</th>
         </tr>
         </thead>
         <tbody>
@@ -60,6 +61,11 @@
                 <a th:href="${s.clink}" class="btn btn-outline-success">
                     Classroom
                 </a>
+            </td>
+            <td>
+                <span class="d-inline-block" tabindex="0" data-toggle="tooltip" th:title="${s.used}">
+                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Is there a need to join?</button>
+                 </span>
             </td>
         </tr>
         </tbody>
