By clicking Subject Managment Sys you will be redirected to current day of the week

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -13,7 +13,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Subject Base🏫</a>
+        <a class="navbar-brand" th:href="@{/today}">Subject Base🏫</a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
