--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -63,13 +63,16 @@
                 </a>
             </td>
             <td>
-                <span class="d-inline-block" tabindex="0" data-toggle="tooltip" >
-                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled th:text="${s.used}"></button>
+                <span class="d-inline-block" tabindex="0" data-toggle="tooltip">
+                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled
+                        th:text="${s.used}"></button>
                  </span>
             </td>
         </tr>
         </tbody>
     </table>
+
+
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Playlist for today</h1>
@@ -83,6 +86,154 @@
             </iframe>
         </div>
     </div>
+
+    <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Books online</h4>
+        <p>Below you can find some links for online books which will be useful thoughout online classes.</p>
+        <hr>
+        <p class="mb-0">Maybe I forgot something, so that I'm really sorry.</p>
+    </div>
+
+    <!-- Algebra -->
+    <!--    <div class="row">-->
+    <!--        <div class="col-sm-6">-->
+    <!--            <div class="card">-->
+    <!--                <div class="card-body">-->
+    <!--                    <h5 class="card-title">Algebra</h5>-->
+    <!--                    <p class="card-text">Algebra online book.</p>-->
+    <!--                    <a href="https://vshkole.com/10-klass/uchebniki/algebra/ag-merzlyak-da-nomirovskij-vb-polonskij-ms-yakir-2018-profilnij-riven"-->
+    <!--                       class="btn btn-primary">Link</a>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        &lt;!&ndash; Geometria &ndash;&gt;-->
+    <!--        <div class="col-sm-6">-->
+    <!--            <div class="card">-->
+    <!--                <div class="card-body">-->
+    <!--                    <h5 class="card-title">Geometry</h5>-->
+    <!--                    <p class="card-text">Geometry online book.</p>-->
+    <!--                    <a href="https://vshkole.com/10-klass/uchebniki/geometriya/ap-yershova-vv-goloborodko-of-krizhanovskij-2018-profilnij-riven"-->
+    <!--                       class="btn btn-primary">Link</a>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <div class="row">
+        <!-- Ukr. Literatura -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ukrainian literature</h5>
+                    <p class="card-text">Ukrainian literature online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/ukrayinska-literatura/ov-slonovska-nv-maftin-nm-vivcharik-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <!-- Biologia -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Biology</h5>
+                    <p class="card-text">Biology online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/biologiya/vi-sobol-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Khimiya -->
+    <!--        <div class="col-sm-6">-->
+    <!--            <div class="card">-->
+    <!--                <div class="card-body">-->
+    <!--                    <h5 class="card-title">Chemistry</h5>-->
+    <!--                    <p class="card-text">Chemistry online book.</p>-->
+    <!--                    <a href="https://vshkole.com/10-klass/uchebniki/ukrayinska-literatura/ov-slonovska-nv-maftin-nm-vivcharik-2018"-->
+    <!--                       class="btn btn-primary">Link</a>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!-- Fizika -->
+    <!--        <div class="col-sm-6">-->
+    <!--            <div class="card">-->
+    <!--                <div class="card-body">-->
+    <!--                    <h5 class="card-title">Physics</h5>-->
+    <!--                    <p class="card-text">Physics online book.</p>-->
+    <!--                    <a href="https://vshkole.com/10-klass/uchebniki/fizika/vg-baryahtar-so-dovgij-fya-bozhinova-2018-riven-standartu"-->
+    <!--                       class="btn btn-primary">Link</a>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--  Ukr. Mova -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ukrainian language</h5>
+                    <p class="card-text">Ukrainian language online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/ukrayinska-mova/om-avramenko-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <!--  Geographiya -->
+        <!--        <div class="col-sm-6">-->
+        <!--            <div class="card">-->
+        <!--                <div class="card-body">-->
+        <!--                    <h5 class="card-title">Geography</h5>-->
+        <!--                    <p class="card-text">Geography online book.</p>-->
+        <!--                    <a href="https://vshkole.com/10-klass/uchebniki/geografiya/gd-dovgan-og-stadnik-2018-riven-standartu"-->
+        <!--                       class="btn btn-primary">Link</a>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--  Zarubizhna literatura-->
+        <!--        <div class="col-sm-6">-->
+        <!--            <div class="card">-->
+        <!--                <div class="card-body">-->
+        <!--                    <h5 class="card-title">Foreign literature</h5>-->
+        <!--                    <p class="card-text">Foreign literature online book.</p>-->
+        <!--                    <a href="https://vshkole.com/10-klass/uchebniki/zarubizhna-literatura/om-nikolenko-ov-orlova-ll-kovalova-2018"-->
+        <!--                       class="btn btn-primary">Link</a>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--  Go -->
+        <!--        <div class="col-sm-6">-->
+        <!--            <div class="card">-->
+        <!--                <div class="card-body">-->
+        <!--                    <h5 class="card-title">Go</h5>-->
+        <!--                    <p class="card-text">Go online book.</p>-->
+        <!--                    <a href="https://vshkole.com/10-klass/uchebniki/gromadyanska-osvita/tv-bakka-lv-margolina-tv-meleschenko-2018"-->
+        <!--                       class="btn btn-primary">Link</a>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--  Istoriya Ukraini -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ukrainian history</h5>
+                    <p class="card-text">Ukrainian history online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/istoriya-ukrayini/vs-vlasov-sv-kulchitskij-2018-profilnij-riven"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  Vsesvitnia -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Foreign history</h5>
+                    <p class="card-text">Foreign history online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/vsesvitnya-istoriya/iya-schupak-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
