--- a/src/main/resources/templates/fri.html
+++ b/src/main/resources/templates/fri.html
@@ -65,8 +65,9 @@
                 </a>
             </td>
             <td>
-                <span class="d-inline-block" tabindex="0" data-toggle="tooltip" >
-                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled th:text="${w.used}"></button>
+                <span class="d-inline-block" tabindex="0" data-toggle="tooltip">
+                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled
+                        th:text="${w.used}"></button>
                  </span>
             </td>
         </tr>
@@ -76,10 +77,111 @@
         <div class="container">
             <h1 class="display-4">Playlist for today</h1>
             <p class="lead">This is a playlist for Friday.</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6sOnJb0Lkj4TQ3OTaWemzK?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/6sOnJb0Lkj4TQ3OTaWemzK?utm_source=generator"
+                    width="100%" height="80" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        </div>
+    </div>
+    <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Books online</h4>
+        <p>Below you can find some links for online books which will be useful thoughout online classes.</p>
+        <hr>
+        <p class="mb-0">Maybe I forgot something, so that I'm really sorry.</p>
+    </div>
+    <!-- Algebra -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Algebra</h5>
+                    <p class="card-text">Algebra online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/algebra/ag-merzlyak-da-nomirovskij-vb-polonskij-ms-yakir-2018-profilnij-riven"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <!--        &lt;!&ndash; Geometria &ndash;&gt;-->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Geometry</h5>
+                    <p class="card-text">Geometry online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/geometriya/ap-yershova-vv-goloborodko-of-krizhanovskij-2018-profilnij-riven"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <!-- Biologia -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Biology</h5>
+                    <p class="card-text">Biology online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/biologiya/vi-sobol-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Foreign literature</h5>
+                    <p class="card-text">Foreign literature online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/zarubizhna-literatura/om-nikolenko-ov-orlova-ll-kovalova-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Khimiya -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Chemistry</h5>
+                    <p class="card-text">Chemistry online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/ukrayinska-literatura/ov-slonovska-nv-maftin-nm-vivcharik-2018"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+
+        <!--  Ukr. Mova -->
+
+        <!--  Geographiya -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Geography</h5>
+                    <p class="card-text">Geography online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/geografiya/gd-dovgan-og-stadnik-2018-riven-standartu"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--          Zarubizhna literatura-->
+
+
+    <!--  Istoriya Ukraini -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ukrainian history</h5>
+                    <p class="card-text">Ukrainian history online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/istoriya-ukrayini/vs-vlasov-sv-kulchitskij-2018-profilnij-riven"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
