--- a/src/main/resources/templates/wed.html
+++ b/src/main/resources/templates/wed.html
@@ -54,7 +54,6 @@
             <td th:text="${w.id}"></td>
             <td th:text="${w.title}"></td>
             <td th:text="${w.content}"></td>
-<!--            <td th:text="${w.link}"></td>-->
             <td>
                 <a th:href="${w.link}" class="btn btn-outline-primary">
                     Zoom
@@ -66,8 +65,9 @@
                 </a>
             </td>
             <td>
-                <span class="d-inline-block" tabindex="0" data-toggle="tooltip" >
-                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled th:text="${w.used}"></button>
+                <span class="d-inline-block" tabindex="0" data-toggle="tooltip">
+                <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled
+                        th:text="${w.used}"></button>
                  </span>
             </td>
         </tr>
@@ -77,9 +77,51 @@
         <div class="container">
             <h1 class="display-4">Playlist for today</h1>
             <p class="lead">This is a playlist for Wednesday.</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4rrlS1FSH45uwuunWvM10K?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/4rrlS1FSH45uwuunWvM10K?utm_source=generator"
+                    width="100%" height="80" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </div>
     </div>
+
+
+    <!-- Algebra -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Algebra</h5>
+                    <p class="card-text">Algebra online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/algebra/ag-merzlyak-da-nomirovskij-vb-polonskij-ms-yakir-2018-profilnij-riven"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Geometry</h5>
+                    <p class="card-text">Geometry online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/geometriya/ap-yershova-vv-goloborodko-of-krizhanovskij-2018-profilnij-riven"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Fizika -->
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Physics</h5>
+                    <p class="card-text">Physics online book.</p>
+                    <a href="https://vshkole.com/10-klass/uchebniki/fizika/vg-baryahtar-so-dovgij-fya-bozhinova-2018-riven-standartu"
+                       class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 </body>
